@@ -1,22 +1,22 @@
 package com.shop.library.utils;
 
+import java.io.File;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
-
 @Component
 public class ImageUpload {
-    private final String UPLOAD_FOLDER = "A:\\Programming\\Create\\Shop\\Admin\\src\\main\\resources\\static\\img\\image-product";
+    private final String UPLOAD_FOLDER = "admin\\src\\main\\resources\\static\\img\\image-product";
 
     public boolean uploadImage(MultipartFile imageProduct) {
         boolean isUpload = false;
         try {
             Files.copy(imageProduct.getInputStream(),
-                    Paths.get(UPLOAD_FOLDER + File.separator, imageProduct.getOriginalFilename()),
+                    Paths.get(Path.of(UPLOAD_FOLDER).toAbsolutePath() + File.separator, imageProduct.getOriginalFilename()),
                     StandardCopyOption.REPLACE_EXISTING);
             isUpload = true;
         } catch (Exception e) {
